--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
+    "startAuth": "nodemon auth-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
