--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -21,7 +22,7 @@
     "mongoose": "^6.2.3",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.5",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.20",
     "qs": "^6.10.3"
   }
 }
