--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "startScript": "nodemon validate.js",
     "start": "nodemon app.js",
     "startAuth": "nodemon auth-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
